--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('cherry-moon.jpg') no-repeat;
+    background: url('cherry-blossom.png') no-repeat;
     background-size: cover;
     background-position: center
 }
@@ -21,7 +21,7 @@ body {
     width: 420px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
-    backdrop-filter: blur(15px);
+    backdrop-filter: blur(10px);
     box-shadow: 0 0 10px rgba(0, 0, 0, .2);
     color: #000;
     border-radius: 10px;
